# chat

./: .env  Cargo.toml  README.md  cliff.toml  deny.toml  output.txt  test.rest
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/fixtures/: decoding.pem
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  mod.rs  server_time.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  app.yml  chat.yml  test.rest
chat_server/fixtures/: encoding.pem  test.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat_server/src/handlers/: auth.rs  chat.rs  message.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  request_id.rs
chat_server/src/models/: chat.rs  file.rs  messages.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/: Cargo.toml
chat_test/tests/: chat.rs
migrations/: 20241202024740_initial.sql  20241202024740_initial.sql.sql  20241209070221_workspace.sql  20241209070221_workspace.sql.sql  20241214063643_triggers.sql
notify_server/: Cargo.toml  index.html  notify.yml
notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notify.rs  sse.rs
sql/: init.sql
src/: lib.rs  main.rs
src/handlers/: auth.rs
