[workspace]
members = ["chat_server", "chat_core", "notify_server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.94"
axum = { version = "0.7.9", features = [
  "http2",
  "multipart",
  "query",
  "tracing",
] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
chat-core = { path = "./chat_core" }
chat-server = { path = "./chat_server" }
chrono = { version = "0.4.39", features = ["serde"] }
jwt-simple = "0.12.10"
serde = { version = "1.0.216", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["compression-full", "trace"] }
uuid = { version = "1.11.0", features = ["v7", "serde"] }
