[workspace]
members = ["chat_server", "chat_core", "notify_server", "chat_test"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.94"
axum = { version = "0.7.9", features = [
  "http2",
  "multipart",
  "query",
  "tracing",
] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
chat-core = { path = "./chat_core" }
chat-server = { path = "./chat_server" }
chrono = { version = "0.4.39", features = ["serde"] }
jwt-simple = "0.12.10"
notify-server = { path = "./notify_server" }
serde = { version = "1.0.216", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
thiserror = "2.0.8"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = [
  "compression-full",
  "trace",
  "cors",
] }
uuid = { version = "1.11.0", features = ["v7", "serde"] }

[profile.dev]
opt-level = "s"   # 优化代码尺寸，兼顾速度
lto = "fat"       # 启用最大程度的链接时优化
codegen-units = 1 # 降低代码生成单元数，增加优化时间但提升性能
panic = "abort"   # 使用 'abort' 而不是 'unwind' 来处理 panic
strip = "symbols" # 移除符号信息，保留必要的调试信息
