[package]
name = "chat-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
jwt-simple = { workspace = true }
sqlx = { workspace = true }
utoipa = { version = "5.2.0", features = ["axum_extras", "chrono"] }
