[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
jwt-simple = "0.12.10"
serde = { workspace = true }
serde_json = "1.0.133"
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["compression-full", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.11.0", features = ["v7", "serde"] }

[dev-dependencies]
http-body-util = "0.1.2"
sqlx-db-tester = "0.5.0"
