[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
test-util = ["http-body-util", "sqlx-db-tester"]

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
chrono = { workspace = true }
chat-core = { workspace = true }
serde = { workspace = true }
jwt-simple = { workspace = true }
serde_json = "1.0.133"
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
http-body-util = { version = "0.1.2", optional = true }
sqlx-db-tester = { version = "0.5.0", optional = true }
sha1 = "0.10.6"
hex = "0.4.3"
mime_guess = "2.0.5"
utoipa = { version = "5.2.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
utoipa-redoc = { version = "5.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "5.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.2.0", features = ["axum"] }

[dev-dependencies]
chat-server = { workspace = true, features = ["test-util"] }
