[package]
name = "chat_test"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chat-core = { workspace = true }
chat-server = { workspace = true, features = ["test-util"] }
notify-server = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
  "json",
  "multipart",
  "stream",
] }
serde = { workspace = true }
serde_json = "1.0.133"
reqwest-eventsource = "0.6.0"
futures = "0.3.31"
