[package]
name = "notify_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.16"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
futures = "0.3.31"
