[package]
name = "notify-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chat-core = { workspace = true }
dashmap = "6.1.0"
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
serde_json = "1.0.133"
jwt-simple = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1.16", features = ["sync"] }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
futures = "0.3.31"
